# pcm2mp3

./: .cproject  .gitignore  .gitmodules  .project  .pydevproject  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  test.pl  test.py
src/: ID3Object.cpp  ID3Object.hpp  Lame.cpp  MP3Object.cpp  MP3Object.hpp  MP3TestObject.cpp  MP3TestObject.hpp  PCMObject.cpp  PCMObject.hpp  PyHeader.cpp  PyHeader.hpp
tests/: __init__.py  time.py
tests/testTranscoder/: __init__.py  test.py
utils/: __init__.py  clean.py
