[metadata]
name = pcm2mp3
version = 1.11.1
description = Utility to convert PCM files to MP3 files
url = https://github.com/jdstmporter/pcm2mp3.git

author = Julian Porter
author_email = julian@jpembedded.solution
license = file: LICENSE.rst
keywords = 
	WAV
	MP3
	transcode
	LAME
classifiers =
    Development Status :: 4 Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Artistic Software
    Topic :: Multimedia :: Sound/Audio :: Conversion
    

 
    

[options]
zip_safe = True
include_package_data = True
tests_require = 
	nose


